# AuthService

./: .gitignore  Cargo.toml  diesel.toml
src/: db.rs  handlers.rs  hasher.rs  jwt.rs  main.rs  models.rs  routes.rs  schema.rs
src/config/: routes.rs
src/core/: database.rs  error.rs  mod.rs  security.rs
src/handlers/: auth.rs  protected.rs
src/models/: auth.rs  auth_tokens.rs  mod.rs  user.rs
src/repositories/: mod.rs  refresh_token_repository.rs  user_repository.rs
