[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
argon2 = "0.5.3"
chrono = "0.4.40"
diesel = {version = "2.2", features = ["postgres", "r2d2", "chrono"]}
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
log = "0.4.26"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = {version = "1", features = ["derive"]} 
serde_json = "1.0.140"
