[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Основные зависимости
actix-web = "4.4"                  # Более новая версия 4.4 вместо 4.9
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
argon2 = "0.5"
jsonwebtoken = "9.3"
serde = { version = "1.0", features = ["derive"] }

chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
thiserror = "1.0"
rand = "0.8"                       # Добавляем вместо rand_core
env_logger = "0.11"                # Для логирования
actix-web-httpauth = "0.8"         # Для работы с Bearer-токенами
r2d2 = "0.8"                       # Явное указание пула соединений
diesel_migrations = "2.1.0"        # Для миграций
serde_json = "1.0.140"
